--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,3 +353,30 @@ body.buscador-activo p a {
             width: 48px; /* Ancho de la imagen */
             height: 48px; /* Alto de la imagen */
         }
+
+/* Estilos para dispositivos móviles (menos de 768px de ancho) */
+@media (max-width: 768px) {
+  section {
+    align-items: flex-start;
+  }
+
+  figure {
+    width: 100%;
+  }
+
+  h2.ds-proj-hedding {
+    margin-left: 0;
+    margin-top: 0.5rem;
+  }
+
+  section > div {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .ri-download-cloud-2-line,
+  .ri-bug-line {
+    margin-left: 0;
+    margin-top: 0.5rem;
+  }
+}
